--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">MyMagicBook_test</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
-
+    <string name="app_name">My Little Magic App</string>
 </resources>
